Make sure all files are installed into the debhelper binary package
Now that we are building more then one binary package, dh_auto_install
no longer uses debian/debhelper by default. Since the transitional
dh-systemd package is supposed to be empty, override dh_auto_install and
set --destdir=debian/debhelper to make sure all files end up in the
debhelper binary package.

Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,9 @@
 debhelper (10.2) UNRELEASED; urgency=medium
 
   * Apply patch from Peter Pentchev to fix some typos.
+  * Apply patch from Michael Biebl to undo a major
+    regression where all of debhelpers functionality was
+    missing (introduced in 10.1).  (Closes: #839557)
 
  -- Niels Thykier <niels@thykier.net>  Sun, 02 Oct 2016 05:50:21 +0000
 
