Introduce --no-stop-on-upgrade as alias of -r
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,11 @@ debhelper (10.2) UNRELEASED; urgency=medium
   * Apply patch from Michael Biebl to undo a major
     regression where all of debhelpers functionality was
     missing (introduced in 10.1).  (Closes: #839557)
+  * dh_installinit,dh_systemd_start: Introduce a new
+    --no-stop-on-upgrade as an alternative to
+    --no-restart-on-upgrade.  This new option should be
+    reduce the confusion of what it does.  Thanks to
+    Michael Biebl for the suggestion.
 
  -- Niels Thykier <niels@thykier.net>  Sun, 02 Oct 2016 05:50:21 +0000
 
