--- a/man/po4a/po/de.po
+++ b/man/po4a/po/de.po
@@ -5928,8 +5928,8 @@ msgstr ""
 
 #. type: =item
 #: dh_installinit:104 dh_systemd_start:54
-msgid "B<-r>, B<--no-restart-on-upgrade>"
-msgstr "B<-r>, B<--no-restart-on-upgrade>"
+msgid "B<-r>, B<--no-stop-on-upgrade>, B<--no-restart-on-upgrade>"
+msgstr "B<-r>, B<--no-stop-on-upgrade>, B<--no-restart-on-upgrade>"
 
 #. type: textblock
 #: dh_installinit:106
@@ -8535,10 +8535,10 @@ msgstr ""
 #: dh_systemd_start:16
 msgid ""
 "B<dh_systemd_start> [S<I<debhelper options>>] [B<--restart-after-upgrade>] "
-"[B<--no-restart-on-upgrade>] [S<I<unit file> ...>]"
+"[B<--no-stop-on-upgrade>] [S<I<unit file> ...>]"
 msgstr ""
 "B<dh_systemd_start> [S<I<Debhelper-Optionen>>] [B<--restart-after-upgrade>] "
-"[B<--no-restart-on-upgrade>] [S<I<Unit-Datei>  …>]"
+"[B<--no-stop-on-upgrade>] [S<I<Unit-Datei>  …>]"
 
 #. type: textblock
 #: dh_systemd_start:20
