--- a/man/po4a/po/es.po
+++ b/man/po4a/po/es.po
@@ -6257,8 +6257,8 @@ msgstr ""
 # type: =item
 #. type: =item
 #: dh_installinit:104 dh_systemd_start:54
-msgid "B<-r>, B<--no-restart-on-upgrade>"
-msgstr "B<-r>, B<--no-restart-on-upgrade>"
+msgid "B<-r>, B<--no-stop-on-upgrade>, B<--no-restart-on-upgrade>"
+msgstr "B<-r>, B<--no-stop-on-upgrade>, B<--no-restart-on-upgrade>"
 
 # type: textblock
 #. type: textblock
@@ -9117,7 +9117,7 @@ msgstr ""
 #| "[S<I<file> ...>]"
 msgid ""
 "B<dh_systemd_start> [S<I<debhelper options>>] [B<--restart-after-upgrade>] "
-"[B<--no-restart-on-upgrade>] [S<I<unit file> ...>]"
+"[B<--no-stop-on-upgrade>] [S<I<unit file> ...>]"
 msgstr ""
 "B<dh_installdocs> [S<I<opciones-de-debhelper>>] [B<-A>] [B<-X>I<elemento>] "
 "[S<I<fichero> ...>]"
