--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (10.2) UNRELEASED; urgency=medium
+debhelper (10.2) unstable; urgency=medium
 
   * Apply patch from Peter Pentchev to fix some typos.
   * Apply patch from Michael Biebl to undo a major
@@ -10,7 +10,7 @@ debhelper (10.2) UNRELEASED; urgency=medium
     reduce the confusion of what it does.  Thanks to
     Michael Biebl for the suggestion.
 
- -- Niels Thykier <niels@thykier.net>  Sun, 02 Oct 2016 05:50:21 +0000
+ -- Niels Thykier <niels@thykier.net>  Sun, 02 Oct 2016 06:20:56 +0000
 
 debhelper (10.1) unstable; urgency=medium
 
