--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (10.2.1) unstable; urgency=medium
+
+  * d/rules: Add a ./run in front of dh_auto_install.  It is
+    technically not needed, but it prevents lintian from assuming
+    that we need to Build-Depend debhelper.
+
+ -- Niels Thykier <niels@thykier.net>  Sun, 02 Oct 2016 06:51:49 +0000
+
 debhelper (10.2) unstable; urgency=medium
 
   * Apply patch from Peter Pentchev to fix some typos.
