--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (10.2.2) UNRELEASED; urgency=medium
+
+  * Fix typo in changelog entry for release 10.2.  Thanks to
+    Peter Pentchev for reporting it.
+
+ -- Niels Thykier <niels@thykier.net>  Sun, 02 Oct 2016 09:52:08 +0000
+
 debhelper (10.2.1) unstable; urgency=medium
 
   * d/rules: Add a ./run in front of dh_auto_install.  It is
@@ -14,7 +21,7 @@ debhelper (10.2) unstable; urgency=medium
     missing (introduced in 10.1).  (Closes: #839557)
   * dh_installinit,dh_systemd_start: Introduce a new
     --no-stop-on-upgrade as an alternative to
-    --no-restart-on-upgrade.  This new option should be
+    --no-restart-on-upgrade.  This new option should
     reduce the confusion of what it does.  Thanks to
     Michael Biebl for the suggestion.
 
