Deprecate compat levels before 9
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debhelper-obsolete-compat.pod
+++ b/debhelper-obsolete-compat.pod
@@ -55,6 +55,8 @@ Every file in F<etc/> is automatically flagged as a conffile by B<dh_installdeb>
 
 =back
 
+This mode is deprecated.
+
 =item v4
 
 Changes from v3 are:
@@ -81,6 +83,8 @@ executable.
 B<dh_link> will correct existing links to conform with policy.
 
 =back
+
+This mode is deprecated.
 
 =item v5
 
