--- a/debhelper.pod
+++ b/debhelper.pod
@@ -305,6 +305,8 @@ This is the lowest supported compatibility level.
 If you are upgrading from an earlier compatibility level, please
 review L<debhelper-obsolete-compat(7)>.
 
+This mode is deprecated.
+
 =item v6
 
 Changes from v5 are:
@@ -335,6 +337,8 @@ directory. In previous compatibility levels it silently refuses to do this.
 
 =back
 
+This mode is deprecated.
+
 =item v7
 
 Changes from v6 are:
@@ -362,6 +366,8 @@ B<dh_installchangelogs> will guess at what file is the upstream changelog if
 none is specified.
 
 =back
+
+This mode is deprecated.
 
 =item v8
 
@@ -391,6 +397,8 @@ any switches come after it. Ie, use "B<dh $@ --foo>", not "B<dh --foo $@>".
 B<dh_auto_>I<*> prefer to use Perl's B<Module::Build> in preference to F<Makefile.PL>.
 
 =back
+
+This mode is deprecated.
 
 =item v9
 
