--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ debhelper (10.2.2) UNRELEASED; urgency=medium
 
   * Fix typo in changelog entry for release 10.2.  Thanks to
     Peter Pentchev for reporting it.
+  * Deprecate all compat levels lower than 9.
 
  -- Niels Thykier <niels@thykier.net>  Sun, 02 Oct 2016 09:52:08 +0000
 
