dh: Remove logs before and not after the override target
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,8 @@ debhelper (10.2.2) UNRELEASED; urgency=medium
   * Fix typo in changelog entry for release 10.2.  Thanks to
     Peter Pentchev for reporting it.
   * Deprecate all compat levels lower than 9.
+  * dh: Discard override log files before running rather than
+    after.
 
  -- Niels Thykier <niels@thykier.net>  Sun, 02 Oct 2016 09:52:08 +0000
 
