--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,9 @@ debhelper (10.2.2) UNRELEASED; urgency=medium
   * Deprecate all compat levels lower than 9.
   * dh: Discard override log files before running rather than
     after.
+  * dh_compress,dh_fixperms: Remove references to long
+    obsolete directories such as usr/info, usr/man and
+    usr/X11*/man.
 
  -- Niels Thykier <niels@thykier.net>  Sun, 02 Oct 2016 09:52:08 +0000
 
