d/changelog: Clarify an entry
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,8 +3,8 @@ debhelper (10.2.2) UNRELEASED; urgency=medium
   * Fix typo in changelog entry for release 10.2.  Thanks to
     Peter Pentchev for reporting it.
   * Deprecate all compat levels lower than 9.
-  * dh: Discard override log files before running rather than
-    after.
+  * dh: Discard override log files before running the override
+    rather than after.
   * dh_compress,dh_fixperms: Remove references to long
     obsolete directories such as usr/info, usr/man and
     usr/X11*/man.
