dh_installdirs: in c11 - don't create d/<pkg> unconditionally
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debhelper.pod
+++ b/debhelper.pod
@@ -605,6 +605,14 @@ B<--mainpackage> option.
 
 Please remember to check/update your doc-base files.
 
+=item -
+
+B<dh_installdirs> no longer creates debian/I<package> directories
+unless explicitly requested (or it has to create a subdirectory in
+it).
+
+The vast majority of all packages will be unaffected by this change.
+
 =back
 
 =back
