Dh_Lib.pm: Fix typo of positive
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -18,6 +18,8 @@ debhelper (10.2.2) UNRELEASED; urgency=medium
     corner case, where an arch:all build would behave
     differently than an arch:all+arch:any when dh_installdir is
     optimised out only for the arch:all build.
+  * Dh_Lib.pm: Fix typo of positive.  Thanks to Matthias Klose
+    for spotting it.
 
  -- Niels Thykier <niels@thykier.net>  Sun, 02 Oct 2016 09:52:08 +0000
 
