--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (10.2.2) UNRELEASED; urgency=medium
+debhelper (10.2.2) unstable; urgency=medium
 
   * Fix typo in changelog entry for release 10.2.  Thanks to
     Peter Pentchev for reporting it.
@@ -21,7 +21,7 @@ debhelper (10.2.2) UNRELEASED; urgency=medium
   * Dh_Lib.pm: Fix typo of positive.  Thanks to Matthias Klose
     for spotting it.
 
- -- Niels Thykier <niels@thykier.net>  Sun, 02 Oct 2016 09:52:08 +0000
+ -- Niels Thykier <niels@thykier.net>  Sat, 08 Oct 2016 10:16:23 +0000
 
 debhelper (10.2.1) unstable; urgency=medium
 
