--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (10.2.3) UNRELEASED; urgency=medium
+
+  * Fix wrong German translation of dh_systemd_start man page. Thanks to
+    Thorsten Alteholz for spotting the mistake! (Closes: #839655)
+
+ -- Axel Beckert <abe@debian.org>  Sat, 08 Oct 2016 13:37:56 +0200
+
 debhelper (10.2.2) unstable; urgency=medium
 
   * Fix typo in changelog entry for release 10.2.  Thanks to
