--- a/man/po4a/po/de.po
+++ b/man/po4a/po/de.po
@@ -8601,7 +8601,7 @@ msgid ""
 "(the latter is only relevant for services without a corresponding init "
 "script)."
 msgstr ""
-"startet die Unit-Datei nach Upgrades und nach anfänglicher Installation "
+"die Unit-Datei nach Upgrades oder nach anfänglicher Installation nicht starten"
 "(letzteres ist nur für Dienste ohne zugehöriges Init-Skript relevant)."
 
 #. type: textblock
