--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,8 @@ debhelper (10.2.3) UNRELEASED; urgency=medium
 
   * Fix wrong German translation of dh_systemd_start man page. Thanks to
     Thorsten Alteholz for spotting the mistake! (Closes: #839655)
+  * dh_auto_test: Apply patch from Mattia Rizzolo to update
+    documentation about running tests during cross-building.
 
  -- Axel Beckert <abe@debian.org>  Sat, 08 Oct 2016 13:37:56 +0200
 
