Fix up current changelog entry: Add author tags

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,10 @@
 debhelper (10.2.3) UNRELEASED; urgency=medium
 
+  [ Axel Beckert ]
   * Fix wrong German translation of dh_systemd_start man page. Thanks to
     Thorsten Alteholz for spotting the mistake! (Closes: #839655)
+
+  [ Mattia Rizzolo ]
   * dh_auto_test: Apply patch from Mattia Rizzolo to update
     documentation about running tests during cross-building.
 
