d/changelog: Add entry for 10.2.2~bpo8+1
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+debhelper (10.2.2~bpo8+1) UNRELEASED; urgency=medium
+
+  * Rebuild for jessie-backports.
+  * Existing changes from previous bpo releases:
+    - Disable automatic dbgsym as it requires dpkg-dev 1.18.2
+    - Revert of sgml-base trigger as it needs a newer version
+      of sgml-base (Related bug: #825005)
+
+ -- Niels Thykier <niels@thykier.net>  Sat, 15 Oct 2016 08:48:11 +0000
+
 debhelper (10.2.2) unstable; urgency=medium
 
   * Fix typo in changelog entry for release 10.2.  Thanks to
