--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (10.2.2~bpo8+1) UNRELEASED; urgency=medium
+debhelper (10.2.2~bpo8+1) jessie-backports; urgency=medium
 
   * Rebuild for jessie-backports.
   * Existing changes from previous bpo releases:
@@ -6,7 +6,7 @@ debhelper (10.2.2~bpo8+1) UNRELEASED; urgency=medium
     - Revert of sgml-base trigger as it needs a newer version
       of sgml-base (Related bug: #825005)
 
- -- Niels Thykier <niels@thykier.net>  Sat, 15 Oct 2016 08:48:11 +0000
+ -- Niels Thykier <niels@thykier.net>  Sun, 16 Oct 2016 06:32:51 +0000
 
 debhelper (10.2.2) unstable; urgency=medium
 
