--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,7 @@ debhelper (10.2.3) UNRELEASED; urgency=medium
   [ Mattia Rizzolo ]
   * dh_auto_test: Apply patch from Mattia Rizzolo to update
     documentation about running tests during cross-building.
+  * dh_auto_test: Note that tests are run under cross-builds
 
  -- Axel Beckert <abe@debian.org>  Sat, 08 Oct 2016 13:37:56 +0200
 
