debhelper.pod: Fix another typo - Thanks to Olly Betts
Gbp-Dch: Ignore
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debhelper.pod
+++ b/debhelper.pod
@@ -621,7 +621,8 @@ system correctly tracks this, the build will be run twice (once for
 the "build" target and once for the "binary" target).
 
 On the other hand, this means that rebuild without cleaning
-(e.g. B<dpkg-buildpackage -nc>) will behave as most people expect.
+(e.g. B<dpkg-buildpackage -nc>) will behave as most people would
+expect.
 
 The previous behaviour can restored by using B<--with build-stamp>
 
