--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,11 @@ debhelper (10.2.3) UNRELEASED; urgency=medium
   * dh_auto_test: Apply patch from Mattia Rizzolo to update
     documentation about running tests during cross-building.
 
+  [ Niels Thykier ]
+  * Bump dependency on dh-strip-nondeterminism to ensure
+    stable-backports uses a functional version.  Thanks to Christoph
+    Biedl for the report. (Closes: #843813)
+
  -- Axel Beckert <abe@debian.org>  Sat, 08 Oct 2016 13:37:56 +0200
 
 debhelper (10.2.2) unstable; urgency=medium
