installinit: do not process systemd files from compat 11 onwards
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debhelper.pod
+++ b/debhelper.pod
@@ -586,6 +586,12 @@ F<menu-method> files are still installed.
 
 =item -
 
+B<dh_installinit> no longer installs F<service> or F<tmpfile> files, nor
+generates maintainer scripts for those files. Use B<dh_systemd_enable> and
+B<dh_systemd_start> instead.
+
+=item -
+
 The B<-s> (B<--same-arch>) option is removed.
 
 =item -
