d/changelog: Add entry for Felipe Sateler's changes
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -13,6 +13,10 @@ debhelper (10.2.3) UNRELEASED; urgency=medium
     stable-backports uses a functional version.  Thanks to Christoph
     Biedl for the report. (Closes: #843813)
 
+  [ Felipe Sateler ]
+  * dh_systemd_start: Fix a bug where --restart-after-upgrade with
+    --no-start would still start the service.  (Closes: #805878)
+
  -- Axel Beckert <abe@debian.org>  Sat, 08 Oct 2016 13:37:56 +0200
 
 debhelper (10.2.2) unstable; urgency=medium
