d/changelog: Another change by Felipe Sateler
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -16,6 +16,8 @@ debhelper (10.2.3) UNRELEASED; urgency=medium
   [ Felipe Sateler ]
   * dh_systemd_start: Fix a bug where --restart-after-upgrade with
     --no-start would still start the service.  (Closes: #805878)
+  * dh_installinit: Leave the handling of debian/pkg.service and
+    debian/pkg.tmpfiles to dh_systemd_*.  (Closes: #830208)
 
  -- Axel Beckert <abe@debian.org>  Sat, 08 Oct 2016 13:37:56 +0200
 
