--- a/debian/changelog
+++ b/debian/changelog
@@ -12,6 +12,9 @@ debhelper (10.2.3) UNRELEASED; urgency=medium
   * Bump dependency on dh-strip-nondeterminism to ensure
     stable-backports uses a functional version.  Thanks to Christoph
     Biedl for the report. (Closes: #843813)
+  * Massage md5sum output to avoid GNU-specific escaping extension
+    while we wait for dpkg-gendigests for a more compatible tool.
+    Thanks to Bernd Zeimetz for the report.  (Closes: #843163)
 
   [ Felipe Sateler ]
   * dh_systemd_start: Fix a bug where --restart-after-upgrade with
