--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (10.2.3) UNRELEASED; urgency=medium
+debhelper (10.2.3) unstable; urgency=medium
 
   [ Axel Beckert ]
   * Fix wrong German translation of dh_systemd_start man page. Thanks to
@@ -22,7 +22,7 @@ debhelper (10.2.3) UNRELEASED; urgency=medium
   * dh_installinit: Leave the handling of debian/pkg.service and
     debian/pkg.tmpfiles to dh_systemd_*.  (Closes: #830208)
 
- -- Axel Beckert <abe@debian.org>  Sat, 08 Oct 2016 13:37:56 +0200
+ -- Niels Thykier <niels@thykier.net>  Sat, 31 Dec 2016 21:27:54 +0000
 
 debhelper (10.2.2) unstable; urgency=medium
 
