dh: Show when running the create-stamp "command"
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ debhelper (10.2.4) UNRELEASED; urgency=medium
 
   * d/changelog: Add missing changelog entry in 10.2.3 for a
     compat 11 change.
+  * dh: Show when the "create-stamp" "command" is being run.
 
  -- Niels Thykier <niels@thykier.net>  Thu, 12 Jan 2017 07:00:19 +0000
 
