dh: Avoid repeating added build commands after "dh_auto_test"
This fixes a bug, where dh would replay a command added to the
"build", "build-arch" or "build-indep" sequences (via --with $ADD_ON)
in the binary sequences.

Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,10 @@ debhelper (10.2.4) UNRELEASED; urgency=medium
   * d/changelog: Add missing changelog entry in 10.2.3 for a
     compat 11 change.
   * dh: Show when the "create-stamp" "command" is being run.
+  * dh: Fix a bug where dh would repeat part of the build sequence
+    when an add-on modified the build sequence after "dh_auto_test".
+    Thanks to Sean Whitton for reporting the issue.
+    (Closes: #851071)
 
  -- Niels Thykier <niels@thykier.net>  Thu, 12 Jan 2017 07:00:19 +0000
 
