Add changelog entry and let po4a refresh the po file
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
 debhelper (10.2.4) UNRELEASED; urgency=medium
 
+  [ Niels Thykier ]
   * d/changelog: Add missing changelog entry in 10.2.3 for a
     compat 11 change.
   * dh: Show when the "create-stamp" "command" is being run.
@@ -7,6 +8,10 @@ debhelper (10.2.4) UNRELEASED; urgency=medium
     when an add-on modified the build sequence after "dh_auto_test".
     Thanks to Sean Whitton for reporting the issue.
     (Closes: #851071)
+
+  [ Translations ]
+  * Update Portuguese translation (Américo Monteiro)
+    (Closes: #851207)
 
  -- Niels Thykier <niels@thykier.net>  Thu, 12 Jan 2017 07:00:19 +0000
 
