--- a/man/po4a/po/pt.po
+++ b/man/po4a/po/pt.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: debhelper 10.2.3\n"
 "Report-Msgid-Bugs-To: debhelper@packages.debian.org\n"
-"POT-Creation-Date: 2016-12-31 21:29+0000\n"
+"POT-Creation-Date: 2017-01-17 20:20+0000\n"
 "PO-Revision-Date: 2017-01-12 22:28+0000\n"
 "Last-Translator: Américo Monteiro <a_monteiro@gmx.com>\n"
 "Language-Team: Portuguese <>\n"
@@ -1360,8 +1360,8 @@ msgid ""
 "B<dh_systemd_start> instead."
 msgstr ""
 "B<dh_installinit> já não instala ficheiros F<service> ou F<tmpfile>, nem "
-"gera scripts do mantenedor para esses ficheiros, Use B<dh_systemd_enable> "
-"e B<dh_systemd_start> em vez deste."
+"gera scripts do mantenedor para esses ficheiros, Use B<dh_systemd_enable> e "
+"B<dh_systemd_start> em vez deste."
 
 #. type: textblock
 #: debhelper.pod:595
@@ -1408,8 +1408,8 @@ msgid ""
 "B<dh_installdirs> no longer creates debian/I<package> directories unless "
 "explicitly requested (or it has to create a subdirectory in it)."
 msgstr ""
-"B<dh_installdirs> já não cria directórios debian/I<pacote> a menos que "
-"tal seja explicitamente pedido (ou se tiver de criar um sub-directório nele)."
+"B<dh_installdirs> já não cria directórios debian/I<pacote> a menos que tal "
+"seja explicitamente pedido (ou se tiver de criar um sub-directório nele)."
 
 #. type: textblock
 #: debhelper.pod:620
@@ -1424,10 +1424,10 @@ msgid ""
 "correctly tracks this, the build will be run twice (once for the \"build\" "
 "target and once for the \"binary\" target)."
 msgstr ""
-"B<dh> já não cria um ficheiro stamp (ou log) para gravar se a compilação "
-"já correu ou não. Isto significa que a menos que o sistema de compilação "
-"do autor (upstream) actual acompanhe isto, a compilação irá correr duas "
-"vezes (uma vez para o alvo \"build\" e outra para o alvo \"binary\")."
+"B<dh> já não cria um ficheiro stamp (ou log) para gravar se a compilação já "
+"correu ou não. Isto significa que a menos que o sistema de compilação do "
+"autor (upstream) actual acompanhe isto, a compilação irá correr duas vezes "
+"(uma vez para o alvo \"build\" e outra para o alvo \"binary\")."
 
 #. type: textblock
 #: debhelper.pod:629
@@ -1989,7 +1989,7 @@ msgstr ""
 "B<DH_ALWAYS_EXCLUDE=CVS:.svn>"
 
 #. type: =head1
-#: debhelper.pod:856 debhelper-obsolete-compat.pod:118 dh:1063 dh_auto_build:48
+#: debhelper.pod:856 debhelper-obsolete-compat.pod:118 dh:1076 dh_auto_build:48
 #: dh_auto_clean:51 dh_auto_configure:53 dh_auto_install:93 dh_auto_test:60
 #: dh_bugfiles:131 dh_builddeb:192 dh_clean:175 dh_compress:252 dh_fixperms:148
 #: dh_gconf:98 dh_gencontrol:167 dh_icons:73 dh_install:326
@@ -2028,7 +2028,7 @@ msgid "Debhelper web site."
 msgstr "Sítio web do debhelper."
 
 #. type: =head1
-#: debhelper.pod:870 dh:1069 dh_auto_build:54 dh_auto_clean:57
+#: debhelper.pod:870 dh:1082 dh_auto_build:54 dh_auto_clean:57
 #: dh_auto_configure:59 dh_auto_install:99 dh_auto_test:66 dh_bugfiles:139
 #: dh_builddeb:198 dh_clean:181 dh_compress:258 dh_fixperms:154 dh_gconf:104
 #: dh_gencontrol:173 dh_icons:79 dh_install:332 dh_installcatalogs:129
@@ -2046,7 +2046,7 @@ msgid "AUTHOR"
 msgstr "AUTOR"
 
 #. type: textblock
-#: debhelper.pod:872 dh:1071 dh_auto_build:56 dh_auto_clean:59
+#: debhelper.pod:872 dh:1084 dh_auto_build:56 dh_auto_clean:59
 #: dh_auto_configure:61 dh_auto_install:101 dh_auto_test:68 dh_builddeb:200
 #: dh_clean:183 dh_compress:260 dh_fixperms:156 dh_gencontrol:175
 #: dh_install:334 dh_installchangelogs:246 dh_installcron:84 dh_installdeb:223
@@ -2076,17 +2076,13 @@ msgid ""
 "and to assist people upgrading from a non-supported compat level to a "
 "supported level."
 msgstr ""
-"Este documento contém o guião de actualização a partir de todos os níveis "
-"de compatibilidade que já não são suportados. Consequentemente é "
-"principalmente para objectivos históricos e para ajudar pessoas a "
-"actualizarem a partir de um nível de compatibilidade não suportado para "
-"um nível suportado."
+"Este documento contém o guião de actualização a partir de todos os níveis de "
+"compatibilidade que já não são suportados. Consequentemente é principalmente "
+"para objectivos históricos e para ajudar pessoas a actualizarem a partir de "
+"um nível de compatibilidade não suportado para um nível suportado."
 
 #. type: textblock
 #: debhelper-obsolete-compat.pod:12
-#| msgid ""
-#| "* The package must be using compatibility level 9 or later (see "
-#| "L<debhelper(7)>)"
 msgid "For upgrades from supported compat levels, please see L<debhelper(7)>."
 msgstr ""
 "Para actualizações a partir de níveis de compatibilidade suportados, por "
@@ -2102,12 +2098,11 @@ msgstr "ACTUALIZAÇÃO DE LISTA PARA NÍVEIS DE COMPATIBILIDADE"
 msgid ""
 "The following is the list of now obsolete compat levels and their changes."
 msgstr ""
-"O seguinte é a lista dos níveis de compatibilidade agora obsoletos e as "
-"suas alterações."
+"O seguinte é a lista dos níveis de compatibilidade agora obsoletos e as suas "
+"alterações."
 
 #. type: =item
 #: debhelper-obsolete-compat.pod:21
-#| msgid "v10"
 msgid "v1"
 msgstr "v1"
 
@@ -2184,7 +2179,6 @@ msgstr "v4"
 
 #. type: textblock
 #: debhelper-obsolete-compat.pod:62
-#| msgid "Changes from v5 are:"
 msgid "Changes from v3 are:"
 msgstr "As alterações a partir de v3 são:"
 
@@ -2254,7 +2248,7 @@ msgstr ""
 "B<dh_install> resulta em erro se as \"wildcards\" expandirem para nada."
 
 #. type: textblock
-#: debhelper-obsolete-compat.pod:120 dh:1065 dh_auto_build:50 dh_auto_clean:53
+#: debhelper-obsolete-compat.pod:120 dh:1078 dh_auto_build:50 dh_auto_clean:53
 #: dh_auto_configure:55 dh_auto_install:95 dh_auto_test:62 dh_builddeb:194
 #: dh_clean:177 dh_compress:254 dh_fixperms:150 dh_gconf:100 dh_gencontrol:169
 #: dh_install:328 dh_installcatalogs:125 dh_installchangelogs:240
@@ -3010,7 +3004,7 @@ msgstr ""
 "sequência."
 
 #. type: textblock
-#: dh:1067 dh_auto_build:52 dh_auto_clean:55 dh_auto_configure:57
+#: dh:1080 dh_auto_build:52 dh_auto_clean:55 dh_auto_configure:57
 #: dh_auto_install:97 dh_auto_test:64 dh_bugfiles:137 dh_builddeb:196
 #: dh_clean:179 dh_compress:256 dh_fixperms:152 dh_gconf:102 dh_gencontrol:171
 #: dh_icons:77 dh_install:330 dh_installchangelogs:242 dh_installcron:80
@@ -3588,8 +3582,7 @@ msgstr ""
 #: dh_clean:19
 #, no-wrap
 msgid ""
-"B<dh_clean> is a debhelper program that is responsible for cleaning up after "
-"a\n"
+"B<dh_clean> is a debhelper program that is responsible for cleaning up after a\n"
 "package is built. It removes the package build directories, and removes some\n"
 "other files including F<debian/files>, and any detritus left behind by other\n"
 "debhelper commands. It also removes common files that should not appear in a\n"
@@ -5796,9 +5789,6 @@ msgstr "debian/I<pacote>.service"
 
 #. type: textblock
 #: dh_installinit:49
-#| msgid ""
-#| "If this exists, it is installed into lib/systemd/system/I<package>."
-#| "service in the package build directory."
 msgid ""
 "If this exists, it is installed into lib/systemd/system/I<package>.service "
 "in the package build directory. Only used in compat levels 10 and below."
@@ -5814,10 +5804,6 @@ msgstr "debian/I<pacote>.tmpfile"
 
 #. type: textblock
 #: dh_installinit:54
-#| msgid ""
-#| "If this exists, it is installed into usr/lib/tmpfiles.d/I<package>.conf "
-#| "in the package build directory. (The tmpfiles.d mechanism is currently "
-#| "only used by systemd.)"
 msgid ""
 "If this exists, it is installed into usr/lib/tmpfiles.d/I<package>.conf in "
 "the package build directory. (The tmpfiles.d mechanism is currently only "
@@ -5825,8 +5811,8 @@ msgid ""
 msgstr ""
 "Se isto existir, é instalado em usr/lib/tmpfiles.d/I<pacote>.conf no "
 "directório de compilação do pacote. (Actualmente o mecanismo tmpfiles.d é "
-"usado apenas pelo systemd.) Apenas usado nos níveis de compatibilidade "
-"10 e inferiores."
+"usado apenas pelo systemd.) Apenas usado nos níveis de compatibilidade 10 e "
+"inferiores."
 
 #. type: textblock
 #: dh_installinit:66
@@ -7463,10 +7449,6 @@ msgstr ""
 
 #. type: textblock
 #: dh_md5sums:20
-#| msgid ""
-#| "B<dh_md5sums> is a debhelper program that is responsible for generating a "
-#| "F<DEBIAN/md5sums> file, which lists the md5sums of each file in the "
-#| "package.  These files are used by the B<debsums> package."
 msgid ""
 "B<dh_md5sums> is a debhelper program that is responsible for generating a "
 "F<DEBIAN/md5sums> file, which lists the md5sums of each file in the "
@@ -8198,12 +8180,10 @@ msgstr ""
 #: dh_strip:98
 #, no-wrap
 msgid ""
-"  dh_strip --dbgsym-migration='libfoo-tools-dbg (<< 2.1-3~), libfoo2-dbg (<< "
-"2.1-3~)'\n"
+"  dh_strip --dbgsym-migration='libfoo-tools-dbg (<< 2.1-3~), libfoo2-dbg (<< 2.1-3~)'\n"
 "\n"
 msgstr ""
-"  dh_strip --dbgsym-migration='libfoo-tools-dbg (<< 2.1-3~), libfoo2-dbg (<< "
-"2.1-3~)'\n"
+"  dh_strip --dbgsym-migration='libfoo-tools-dbg (<< 2.1-3~), libfoo2-dbg (<< 2.1-3~)'\n"
 "\n"
 
 #. type: =item
