dh-systemd: install mount units in /lib/systemd/system
Currently dh_systemd_enable installs mount units in /usr/lib/system
which is very likely a typo.
The systemd package installs its own mount units in
/lib/systemd/system so make dh-systemd install them there as well.

Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,10 @@ debhelper (10.2.4) UNRELEASED; urgency=medium
     Thanks to Sean Whitton for reporting the issue.
     (Closes: #851071)
 
+  [ Luca Boccassi ]
+  * dh_systemd_enable: Correct installation for "mount" units.
+    (Closes: #851744)
+
   [ Translations ]
   * Update Portuguese translation (Américo Monteiro)
     (Closes: #851207)
